1. Website icon and title added 2. Search bar added 3. Commercial ware category panel added 4. Merchandise carousel added